--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,9 @@
 		<meta name="theme-color" content="#FF6B6C">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="manifest" href="manifest.json">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500"/>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Monoton" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Dosis:100,300,400,500,700|Material+Icons' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- Optional theme -->
 		<title>With Love</title>
